<resources>
    <string name="app_name">Web Opac</string>
    <string name="launcher_name">Web Opac</string>
    <string name="web_opac">Web Opac</string>
    <string name="branch">Branch library</string>
    <string name="barcodes">Barcodes</string>
    <string name="go_search">Find</string>
    <string name="prefs">Settings</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="about_summary">About this app</string>
    <string name="changelog">Changelog</string>
    <string name="close">Close</string>
    <string name="osl">License notes</string>
    <string name="thanks">Credits</string>
    <string name="developer_settings">Developer settings</string>
    <string name="details_head">Details</string>
    <string name="copies_head">Copies</string>
    <string name="ret">Return date</string>
    <string name="res">Reserved</string>
    <string name="tocollection">To collection</string>
    <string name="reserve">Reserve</string>
    <string name="lendebook">Lend e-book</string>
    <string name="doing_res">Performing reservation…</string>
    <string name="opac_error_email">Please set your e-mail address in the app\'s settings.</string>
    <string name="doing_booking">Lending…</string>
    <string name="status_nouser">You didn\'t specify any login data for this account in the settings.</string>
    <string name="pending_fees">Library fines due:</string>
    <string name="valid_until">Account valid until:</string>
    <string name="no_warranty">All information is supplied without liability.</string>
    <string name="lent_head">Lent</string>
    <string name="reservations_head">Reservations</string>
    <string name="lent_none">Nothing lent</string>
    <string name="reservations_none">Nothing reserved</string>
    <string name="cancel_confirm">Do you really want to cancel this reservation?</string>
    <string name="prolong_confirm">Do you really want to renew this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="accept">OK</string>
    <string name="doing_cancel">Reservation is being cancelled…</string>
    <string name="doing_prolong">Performing renewal…</string>
    <string name="doing_download">Download information is being retrieved…</string>
    <string name="reader_needed">To read the e-book, you need a separate app, for example \'Aldiko\'. Click \'Ignore\' if you already have such an app, this message won\'t show up again in this case. Click \'Download\' to open up the Play Store to download Aldiko.</string>
    <string name="reader_needed_overdrive">To open this medium, you need a separate app, for example OverDrive\'s own app. Click \'Ignore\' if you already have such an app, this message won\'t show up again in this case. Click \'Download\' to open up the Play Store to download the OverDrive app.</string>
    <string name="reader_needed_ignore">Ignore</string>
    <string name="doing_prolong_all">All renewable media is being renewed…</string>
    <string name="prolong_all_confirm">Really renew all items in your account? In some libraries this might cause fees.</string>
    <string name="opac_error">Web Opac error message:</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_select">To get started, you have to select a library.</string>
    <string name="welcome_account">The account can be anonymous (search only) or include a library ID number and password (enabling account-related features). You can add additional accounts later.</string>
    <string name="select_library">Select library</string>
    <string name="report">Send report</string>
    <string name="report_sending">Sending report…</string>
    <string name="report_sent">Report sent. Thank you!</string>
    <string name="report_error">Error report could not be sent.</string>
    <string name="notifications">Notifications</string>
    <string name="notification_service">Expiring items</string>
    <string name="notification_service_desc">Notify, if an item is about to expire (no warranties given)</string>
    <string name="notification_service_wifionly">Check on WiFi only</string>
    <string name="notification_service_wifionly_desc">Does not download information over mobile networks. You might miss some notifications if you go without WiFi for a longer time.</string>
    <string name="notification_channel">Expiry notifications</string>
    <string-array name="warning">
        <item>Same day</item>
        <item>1 day before</item>
        <item>3 days before</item>
        <item>1 week before</item>
    </string-array>
    <string name="startup_title">Start screen</string>
    <string name="startup_summary">Which screen should be shown on startup?</string>
    <string-array name="startup_labels">
        <item>Search</item>
        <item>Account</item>
        <item>Favorites</item>
        <item>Information</item>
    </string-array>
    <string-array name="startup_values">
        <item>search</item>
        <item>account</item>
        <item>starred</item>
        <item>info</item>
    </string-array>
    <string name="notification_warning">Warning period</string>
    <string name="notification_warning_desc">How long before the due date should a notification be shown?</string>
    <plurals name="notif_ticker">
        <item quantity="one">%d item is about to expire!</item>
        <item quantity="other">%d items are about to expire!</item>
    </plurals>
    <string name="notif_title">Items are about to expire</string>
    <plurals name="notif_ticker_expired">
        <item quantity="one">%d item has expired!</item>
        <item quantity="other">%d items have expired!</item>
    </plurals>
    <string name="notif_title_expired">Items have expired</string>
    <string name="notif_plus_more">+%d more</string>
    <string name="notif_snooze">Later</string>
    <string name="notif_dont_remind_again">Discard</string>
    <string name="volumes">Volumes</string>
    <string name="volumesearch">Show volumes</string>
    <string name="star">Save to favorites</string>
    <string name="starred">The item is now on your favorites list.</string>
    <string name="star_wait">Please wait for the details to load.</string>
    <string name="star_unsupported">We could not obtain enough information about this item to add it to your list.</string>
    <string name="starred_welcome">This is your favorites list. You can add items by clicking the star on a detail page. The list is saved separately for every library you use.</string>
    <string name="history_welcome">This is your lending history. It keeps a list of all items you have lent in the past. The list is saved separately for every library you use.</string>
    <string name="share">Share</string>
    <string name="share_wait">Please wait for the details to load.</string>
    <string name="share_notsupported">Not supported in this library.</string>
    <string name="unsupported">Not supported</string>
    <string name="account_unsupported_api">This feature is not yet supported in your library. Sorry \uD83D\uDE1E</string>
    <string name="account_unsupported_api_opensource"><![CDATA[This feature is not yet supported in your library. Sorry \uD83D\uDE1E<br><br>If you have experience in programming and some spare time, you might be able to help us to implement it. You can find more information about this on <a href="https://github.com/opacapp/opacclient">GitHub</a>]]>.</string>
    <string name="write_mail">Write e-mail</string>
    <string name="info_error">Could not load additional information for this library.</string>
    <string name="info_unsupported">We don\'t have any information about this library to show.</string>
    <string name="accounts">Accounts</string>
    <string name="accounts_desc">Manage your libraries and membership numbers</string>
    <string name="privacy">Privacy</string>
    <string name="nav_search">Search</string>
    <string name="nav_account">Account</string>
    <string name="nav_starred">Favorites</string>
    <string name="nav_info">Information</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About this app</string>
    <string name="share_starred">Share</string>
    <string name="export_starred_to_storage">Export</string>
    <string name="import_starred_from_storage">Import</string>
    <string name="sort_history">Sort</string>
    <string name="sort_history_title">by title</string>
    <string name="sort_history_author">by author</string>
    <string name="sort_history_firstDate">by start date</string>
    <string name="sort_history_lastDate">by return date</string>
    <string name="sort_history_duration">by lending duration</string>
    <string name="sort_history_prolongCount">by no. of renewals</string>
    <string name="setting_nfc">Search by NFC tags</string>
    <string name="setting_nfc_desc">Experimental. Only on some devices and in some libraries.</string>
    <string name="email_address">Email address</string>
    <string name="email_address_description">Required for e-book reservations</string>
    <string name="prolong">Renew</string>
    <string name="reservation_cancel">Cancel reservation</string>
    <string name="reservation_book">Lend</string>
    <string name="mediatype">Media type</string>
    <string name="status">Status</string>
    <string name="meta_clear_title">Clear cache</string>
    <string name="meta_clear">Deletes cached metadata</string>
    <string name="meta_run_check">Run sync service</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="website_url">www.opacapp.net</string>
    <string name="support">Support</string>
    <string name="support_url">https://opac.app/en/support/</string>
    <string name="other">Other</string>
    <string name="source">Source Code</string>
    <string name="shelfmark">Shelfmark</string>
    <string name="url">URL</string>
    <string name="return_date">Return date</string>
    <string name="location">Location</string>
    <string name="department">Department</string>
    <string name="reservations">Reservations</string>
    <string name="author">Author</string>
    <string name="title_and_author">Title and Author</string>
    <string name="go_to_details">Go to details</string>
    <string name="nfc_title">NFC search available</string>
    <string name="nfc_intro">This library is known to support NFC search. This means that while
        you are on the app\'s main page, you can physically tap the back of your device on one of
        the library\'s books (or other media) and the app will directly show its details. This
        feature works using small stickers with NFC technology on the rear side of the book or
        beneath the front or back cover. The feature can be affected by the way you place your
        device on the book or accessories like smartphone cases and might not be available for all
        media in the library.
    </string>
    <string name="nfc_question">Do you want to activate NFC search?</string>
    <string name="content_description_nfc_logo">NFC logo</string>
    <string name="notification_repeat">Repeat notifications</string>
    <string name="toggle_notice_button">Got it</string>
    <string name="preference_category_library_config">Library data</string>
    <string name="preference_update_library_config">Update library data</string>
    <string name="preference_reset_library_config">Reset library data</string>
    <string name="preference_reset_library_config_desc">to state from last app update</string>
    <string name="support_policy_hint">We provide no free support for use of this library in the
        app, problems that may occur in the future will probably not be fixed.</string>
    <string name="support_policy_more_info">more info</string>
</resources>