<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="cat_web_opac"
        android:title="@string/web_opac">
        <Preference
            android:key="accounts"
            android:summary="@string/accounts_desc"
            android:title="@string/accounts"/>

        <ListPreference
            android:defaultValue="search"
            android:entries="@array/startup_labels"
            android:entryValues="@array/startup_values"
            android:key="startup_fragment"
            android:summary="@string/startup_summary"
            android:title="@string/startup_title" />

        <EditTextPreference
            android:key="email"
            android:summary="@string/email_address_description"
            android:title="@string/email_address"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:key="notification_service"
            android:summary="@string/notification_service_desc"
            android:title="@string/notification_service"/>
        <CheckBoxPreference
            android:dependency="notification_service"
            android:key="notification_service_wifionly"
            android:summary="@string/notification_service_wifionly_desc"
            android:title="@string/notification_service_wifionly"/>

        <ListPreference
            android:defaultValue="3"
            android:dependency="notification_service"
            android:entries="@array/warning"
            android:entryValues="@array/warning_n"
            android:key="notification_warning"
            android:summary="@string/notification_warning_desc"
            android:title="@string/notification_warning"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notification_service"
            android:key="notification_repeat"
            android:title="@string/notification_repeat" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_library_config">
        <Preference
            android:key="update_library_config"
            android:title="@string/preference_update_library_config"/>
        <Preference
            android:key="reset_library_config"
            android:title="@string/preference_reset_library_config"
            android:summary="@string/preference_reset_library_config_desc"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/developer_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="nfc_search"
            android:summary="@string/setting_nfc_desc"
            android:title="@string/setting_nfc"/>

        <Preference
            android:key="meta_clear"
            android:summary="@string/meta_clear"
            android:title="@string/meta_clear_title"/>

        <Preference
            android:key="meta_run_check"
            android:title="@string/meta_run_check"/>
    </PreferenceCategory>

</PreferenceScreen>