<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_action_star_0"
        app:showAsAction="ifRoom"
        android:title="@string/star">
    </item>
    <item
        android:id="@+id/action_reservation"
        app:showAsAction="ifRoom|withText"
        android:title="@string/reserve">
    </item>
    <item
        android:id="@+id/action_lendebook"
        app:showAsAction="ifRoom|withText"
        android:title="@string/lendebook">
    </item>
    <item
        android:id="@+id/action_tocollection"
        app:showAsAction="never"
        android:title="@string/tocollection">
    </item>

</menu>