<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_prolong"
        app:showAsAction="ifRoom"
        android:title="@string/prolong"
        android:icon="@drawable/ic_prolong_24dp">
    </item>
    <item
        android:id="@+id/action_download"
        app:showAsAction="ifRoom"
        android:title="@string/download"
        android:icon="@drawable/ic_download_24dp">
    </item>
    <item
        android:id="@+id/action_cancel"
        app:showAsAction="ifRoom"
        android:title="@string/reservation_cancel"
        android:icon="@drawable/ic_cancel_24dp">
    </item>
    <item
        android:id="@+id/action_booking"
        app:showAsAction="ifRoom"
        android:title="@string/reservation_book"
        android:icon="@drawable/ic_booking_24dp">
    </item>
</menu>