<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="@dimen/key_line"
    android:layout_marginRight="@dimen/key_line">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/tvBranch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:drawableLeft="@drawable/ic_branch"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:contentDescription="@string/branch"/>

        <TextView
            android:id="@+id/tvDepartment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:drawableLeft="@drawable/ic_department"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:contentDescription="@string/department"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:contentDescription="@string/location"/>

        <TextView
            android:id="@+id/tvShelfmark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:drawableLeft="@drawable/ic_shelfmark"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:contentDescription="@string/shelfmark"/>

        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:contentDescription="@string/url"
            android:drawableLeft="@drawable/ic_url_selector"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textIsSelectable="true"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:drawableLeft="@drawable/ic_status"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:contentDescription="@string/status"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/tvReturndate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:drawableLeft="@drawable/ic_return_date"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/return_date"/>

            <TextView
                android:id="@+id/tvReservations"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:drawableLeft="@drawable/ic_reservations"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/reservations"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>